--- a/src/ProfileAvatarSelector.css
+++ b/src/ProfileAvatarSelector.css
@@ -15,20 +15,19 @@
 }
 
 .profile-back {
-  position: absolute;
-  top: 20%;
-  transform: translateY(-50%);
-  left: 20px;
+  /* position: absolute; */
+  /* top: 30px;
+  left: 20px; */
+  /* left: 20px; */
+  /* width: 32px;
+  height: 32px; */
+  /* transform: translateY(-50%); */
   background: none;
   border: none;
   padding: 0;
   cursor: pointer;
   z-index: 2;
-  width: 32px;
-  height: 32px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  
 }
 
 .profile-back img {
