--- a/src/Ticket.css
+++ b/src/Ticket.css
@@ -10,9 +10,7 @@
 
 .ticket-header {
     position: fixed;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    /* top: 0; */
     width: 100%;
     max-width: 430px;
     z-index: 1000;
@@ -28,14 +26,18 @@
 .back-button {
     background: none;
     border: none;
-    padding: 8px;
+    padding: 0px;
     cursor: pointer;
+    /* top: 10px;
+    left: 30px; */
 }
 
 .header-stats {
     display: flex;
     gap: 16px;
     margin-right: 30px;
+    right: 10px;
+    position: absolute;
 }
 
 .stat-ticket {
